--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@ in app ngrok
 ngrok http 8080 copy upt to dev 
 paste in github payload afterthat/github-webhook/
 
-email
-smtpserver->smtp.gmail.com
-smtpport 587
 
-password kosm google.accounts.com lo app passwords lo create 
+
+password kosm accounts.google.com lo app passwords lo create 
+managesettings jenkins -> systems->extended email smtpserver->smtp.gmail.com port 587->use tls
+advance settings lo ngrok copy pass username mana mail
+email notification same
