--- a/index.html
+++ b/index.html
@@ -186,3 +186,7 @@ password kosm accounts.google.com lo app passwords lo create
 managesettings jenkins -> systems->extended email smtpserver->smtp.gmail.com port 587->use tls
 advance settings lo ngrok copy pass username mana mail
 email notification same
+
+build lo add post build lo emailnotification lo reciptente ante na mail
+add post again email extend lo project from and project next column na mail
+adv settings lo add reciptens appluy save
