--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ docker rmijasonrivers/nagios:latest
 </html>
 cmd 
 >minikube start
-kubecetl create deployment mynginx --image=nginx
+kubectl create deployment mynginx --image=nginx
 >kubectl create deployment newnginx --image=nginx
 kubectl expose deployment newnginx --type=NodePort --port=80
 kubectl port-forward service/newnginx 8090:80
@@ -129,11 +129,13 @@ localhost:8090
 nagios
 docker pull jasonrivers/nagios
 docker run -d --name nagios -p 9090:80 jasonrivers/nagios
-
+nagiosadmin
+nagios
 localhost:9090
 servecies->currentload
 
 aws
+https://awsacademy.instructure.com/
 sudo apt update
 sudo apt-get install docker.io
 sudo apt install git
