--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@ docker rmijasonrivers/nagios:latest
 cmd 
 >minikube start
 kubectl create deployment mynginx --image=nginx
->kubectl create deployment newnginx --image=nginx
-kubectl expose deployment newnginx --type=NodePort --port=80
+kubectl expose deployment mynginx --type=NodePort --port=80
 kubectl port-forward service/newnginx 8090:80
 
 localhost:8090
@@ -142,7 +141,7 @@ sudo apt install git
 git clone https://github.com/ruchithachakilam/ms.git
 cd ms
 sudo docker build -t myapp .
-sudo docker run -t -p 8883:8080 newapp
+sudo docker run -t -p 8883:8080 myapp
 
 
 scripted
