--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@ localhost:8081
         docker compose up -d
         docker ps
         ------
+docker login
+docker tag oltrs-libraryapp ruchi123/oltrs-libraryapp:latest
+docker push ruchi123/oltrs-libraryapp:latest
 
 
 curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-installer.exe
@@ -223,3 +226,9 @@ email notification same
 build lo add post build lo emailnotification lo reciptente ante na mail
 add post again email extend lo project from and project next column na mail
 adv settings lo add reciptens appluy save
+
+
+maven
+new->java->mavencentral->apache.maven.arcytypes lo quickstart
+org1.example
+23bd1a0568
