--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@ PUT YOUR HIDDEN CONTENT HERE
 
     <div id="secret" class="hidden-block">
 
+        git config --global --list
+        git config --global user.name " "
+        email
+        nano txt
+
+        docker --version
+        docker pull nginx
+        docker run -it -p 8080:8080 --name mynagnix nginx
+        docker ps
+        
+
         dockerfile
 FROM tomcat:9-jdk11
 COPY target/*.war /usr/local/tomcat/webapps/ROOT.war
